# shortbet

./: .gitignore  README.md  main.py  makefile  process_tickers.py  pyproject.toml  short_ticker.py  symbols.txt
.github/workflows/: action.yml  codeql-analysis.yml
data/: history.csv  latest.csv  latest.json  results.csv
model/: short_ticker.py
test/: test_performance.py  test_symbols.txt
