[tool.poetry]
name = "shortbet"
version = "0.1.0"
description = ""
authors = ["Lasse Benninga <lassebenninga@godatadriven.com>"]

[tool.poetry.dependencies]
python = "^3.9"
yfinance = "^0.1.64"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.10b0", allow-prereleases = true}
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
