[tool.poetry]
name = "shortbet"
version = "0.1.0"
description = ""
authors = ["Lasse Benninga <lassebenninga@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
yfinance = "^0.1.64"
dataclass-csv = "^1.3.0"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
black = {version = "^21.10b0", allow-prereleases = true}
mypy = "^0.910"
ptpython = "^3.0.20"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
